[package]
name = "pos-system-backend"
version = "0.1.0"
authors = ["Brighton Sikarskie <bsikar@tuta.io>"]
edition = "2021"
description = "back end and server for a point of sale system"
readme = "README.md"
homepage = "https://github.com/bsikar/pos-system"
repository = "https://github.com/bsikar/pos-system"
license = "MIT"
keywords = ["pos"]

[dependencies]
#async
tokio = { version = "1.17.0", features = ["full"] }
async-trait = "0.1.52"

# cli
clap = { version = "3.1.2", features = ["cargo"] }

# errors
thiserror = "1.0.30"

# json
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"

# web
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-rt = "2.7.0"

# database
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }

# date
chrono = { version = "0.4.19", features = ["serde"] }

# others
config = "0.12.0"

[dev-dependencies]
anyhow = "1.0.55"

[features]
