[package]
name = "pos-system-backend"
version = "0.1.0"
authors = ["Brighton Sikarskie <bsikar@tuta.io>"]
edition = "2021"
description = "backend and server for a point of sale system"
readme = "README.md"
homepage = "https://github.com/bsikar/pos-system"
repository = "https://github.com/bsikar/pos-system"
license = "MIT"
keywords = ["pos"]

[dependencies]
# errors
thiserror = "1.0.30"

# json
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"

# web
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-cors = "0.6.1"
actix-rt = "2.7.0"

# database
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "serde_json", "r2d2"] }
r2d2 = "0.8.9"

# date
chrono = { version = "0.4.19", features = ["serde"] }

# others
config = "0.13.1"
colored = "2.0.0"

[dev-dependencies]
anyhow = "1.0.55"

[features]
